--- a/CAN-DAQ/src/index.html
+++ b/CAN-DAQ/src/index.html
@@ -45,7 +45,8 @@
             <img id="header-logo" src="assets/logo.png" alt="Logo">
         </div>
         <div class="right-header">
-            <div id="header-title">CAN Bus Training System</div>
+            <div id="header-title">CAN-BUS Protocol Training System</div>
+            <h3 style="margin-bottom: 0;">NVIS438CN</h3>
         </div>
     </header>
     <div class="main-wrapper">
@@ -75,7 +76,7 @@
                     <p>NA</p>
                 </span>
                 <span>
-                    <label for="status">Address: </label>
+                    <label for="status">ID: </label>
                     <p>NA</p>
                 </span>
             </div>
@@ -94,7 +95,7 @@
                     <p>NA</p>
                 </span>
                 <span>
-                    <label for="status">Address: </label>
+                    <label for="status">ID: </label>
                     <p>NA</p>
                 </span>
             </div>
@@ -114,7 +115,7 @@
                     <p>NA</p>
                 </span>
                 <span>
-                    <label for="status">Address: </label>
+                    <label for="status">ID: </label>
                     <p>NA</p>
                 </span>
             </div>
@@ -133,7 +134,7 @@
                     <p>NA</p>
                 </span>
                 <span>
-                    <label for="status">Address: </label>
+                    <label for="status">ID: </label>
                     <p>NA</p>
                 </span>
             </div>
@@ -152,7 +153,7 @@
                     <p>NA</p>
                 </span>
                 <span>
-                    <label for="status">Address: </label>
+                    <label for="status">ID: </label>
                     <p>NA</p>
                 </span>
             </div>
@@ -172,7 +173,7 @@
                     <p>NA</p>
                 </span>
                 <span>
-                    <label for="status">Address: </label>
+                    <label for="status">ID: </label>
                     <p>NA</p>
                 </span>
             </div>
